added img header and h1 header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <title>Toboolist</title>
     </head>
     <body>
-        <!--Header-->
-            <!--Logo-->
-            <!--h1-->
+        <header>
+            <img id="logo" src="img/Logo.png" alt="Logo">
+            <h1>Toboolist</h1>
+        </header>
     </body>
 </html>
