--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <body>
         <header>
             <img id="logo" src="img/Logo.png" alt="Logo">
-            <h1>Toboolist</h1>
+            <h1 class="title-header">
+                Toboolist
+            </h1>
         </header>
     </body>
 </html>
