fixed id logo header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img id="logo" src="img/Logo.png" alt="Logo">
+            <img id="logo-header" src="img/Logo.png" alt="Logo">
             <h1 class="title-header">
                 Toboolist
             </h1>
