added header main

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Toboolist</title>
     </head>
+    
     <body>
         <header>
             <img id="logo-header" src="img/Logo.png" alt="Logo">
@@ -15,5 +16,12 @@
                 Toboolist
             </h1>
         </header>
+        <div class="container-button">
+            <header>
+                <button class="button add-task" type="button">Add Task</button>
+                <button class="button add-section" type="button">Add Section</button>
+            </header>
+        </div>
+    
     </body>
 </html>
