added section today

--- a/index.html
+++ b/index.html
@@ -29,7 +29,37 @@
                 <section class="new-task">
                     <h2>&#9660;New Task</h2>
                     <ul>
-                        <li class="row"><span class="icon checked"></span>Quarterly Newsletter <span class="label">Editorial</span></li>
+                        <li class="row"><span class="icon checked"></span>Quarterly Newsletter<span class="label blue">Editorial</span></li>
+                    </ul>
+                </section>
+                
+                <section class="today">
+                    <h2>&#9660;Today</h2>
+                    <ul>
+                        <li class="row">
+                            <span class="icon checked"></span>
+                            Recruiting blog post
+                            <span class="label blue">
+                                Editorial
+                            </span>
+                        </li>
+                        <li class="row">
+                            <span class="icon checked"></span>
+                            Mobile app launch
+                            <span class="label purple">
+                                Q1-goals
+                            </span>
+                        </li>
+                        <li class="row">
+                            <span class="icon delete"></span>
+                            Interview John H.
+                            <span class="label green">
+                                Recruiting
+                            </span>
+                        </li>
+                        <li class="row">
+                            <span class="icon checked"></span>
+                            Summit update to mobile storefronts<span class="label orange">Mobile</span></li>
                     </ul>
                 </section>
             </main>
