add upcoming section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <section class="new-task">
                     <h2>&#9660;New Task</h2>
                     <ul>
-                        <li class="row"><span class="icon checked"></span>Quarterly Newsletter<span class="label blue">Editorial</span></li>
+                        <li class="row"><span class="icon checked"></span>Quarterly Newsletter<span class="label editorial">Editorial</span></li>
                     </ul>
                 </section>
                 
@@ -39,27 +39,64 @@
                         <li class="row">
                             <span class="icon checked"></span>
                             Recruiting blog post
-                            <span class="label blue">
+                            <span class="label editorial">
                                 Editorial
                             </span>
                         </li>
                         <li class="row">
                             <span class="icon checked"></span>
                             Mobile app launch
-                            <span class="label purple">
+                            <span class="label goals">
                                 Q1-goals
                             </span>
                         </li>
                         <li class="row">
                             <span class="icon delete"></span>
                             Interview John H.
-                            <span class="label green">
+                            <span class="label recruiting">
                                 Recruiting
                             </span>
                         </li>
                         <li class="row">
                             <span class="icon checked"></span>
-                            Summit update to mobile storefronts<span class="label orange">Mobile</span></li>
+                            Summit update to mobile storefronts<span class="label mobile">
+                                Mobile
+                            </span>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="upcoming">
+                    <h2>&#9660;Upcoming</h2>
+                    <ul>
+                        <li class="row">
+                            <span class="icon delete"></span>
+                            Schedule Meeting with Alex
+                            <span class="label recruiting">
+                                Recruiting
+                            </span>
+                        </li>
+                        <li class="row">
+                            <span class="icon checked"></span>
+                            Homepage refresh
+                            <span class="label website">
+                                Website
+                            </span>
+                        </li>
+                        <li class="row">
+                            <span class="icon delete"></span>
+                            Onboard new sales team members
+                            <span class="label sales">
+                                Sales
+                            </span>
+                        </li>
+                        <li class="row">
+                            <span class="icon checked"></span>
+                            Review editorial character
+                            <span class="label editorial">
+                                Editorial
+                            </span>
+                        </li>
                     </ul>
                 </section>
             </main>
