--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <div class="container-main">
             <main>
                 <section class="new-task">
-                    <h2>&#9660;New Task</h2>
+                    <h2><span class="triangle"></span>New Task</h2>
                     <ul>
                         <li class="row"><span class="icon checked"></span>Quarterly Newsletter<span class="label editorial">Editorial</span></li>
                     </ul>
                 </section>
                 
                 <section class="today">
-                    <h2>&#9660;Today</h2>
+                    <h2><span class="triangle"></span>Today</h2>
                     <ul>
                         <li class="row">
                             <span class="icon checked"></span>
@@ -67,7 +67,7 @@
                 </section>
 
                 <section class="upcoming">
-                    <h2>&#9660;Upcoming</h2>
+                    <h2><span class="triangle"></span>Upcoming</h2>
                     <ul>
                         <li class="row">
                             <span class="icon delete"></span>
